refactor: update return statement